--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "fluks",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "author": {
     "name": "Yuri Neves Silveira",
     "url": "http://yneves.com/",
-    "email": "npm@yneves.com"
+    "email": "yurinevessilveira@gmail.com"
   },
   "license": "MIT",
   "homepage": "https://github.com/yneves/fluks",
@@ -17,6 +17,6 @@
     "bauer-factory": "^2.0.4",
     "flux": "^2.0.1",
     "immutable": "^3.7.5",
-    "mocha": "^2.1.0"
+    "mocha": "^2.3.4"
   }
 }
